Fix borders stretching

--- a/src/components/PageWrapper/PageWrapper.module.scss
+++ b/src/components/PageWrapper/PageWrapper.module.scss
@@ -3,29 +3,42 @@
 $border-margin: 61px;
 
 .pageWrapper {
-    position: absolute;
-    width: calc(100% - 2 * #{$border-margin});
+    width: calc(100% - #{$border-margin * 2});
+    min-height: 100%;
     height: 100%;
-    padding: 0 $border-margin;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    z-index: -10;
-}
-
-.border {
-    width: 2px;
-    height: 100%;
-    margin: 0;
-    background: repeating-linear-gradient(
-                    to bottom,
-                    $second-color 0,
-                    $second-color 12px,
-                    transparent 12px,
-                    transparent 22px
-    );
+    margin: -3px auto auto auto;
+    position: relative;
+    border-width: 3px;
+    border-style: solid;
+    border-image:
+            repeating-linear-gradient(
+                            to bottom,
+                            $second-color 6px,
+                            $second-color 32px,
+                            transparent 32px,
+                            transparent 52px
+            );
+    border-image-width: 100% 4px;
 }
 
 .contentWrapper {
+    position: relative;
     margin: 0;
+}
+
+.content {
+    width: calc(100% + #{$border-margin * 2});
+    position: relative;
+    top: 0;
+    left: -$border-margin;
+    right: 0;
+    bottom: 0;
+
+    // blocks of content
+    & > div {
+        width: 100%;
+        box-sizing: border-box;
+        padding: 120px 208px;
+        margin: 60px 0;
+    }
 }
